@@ -1,5 +1,5 @@
-custom_config_inc.php
 custom_constant_inc.php
 custom_strings_inc.php
+custom_functions_inc.php
 config_inc.php
 .#*
